# yuanlive-tauri

./: .editorconfig  .env  .env.dev  .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .lintstagedrc.mjs  .prettierignore  .prettierrc  .release-it.cjs  .release-it.js  CHANGELOG.md  README.md  biome.json  commitlint.config.cjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: labeler.yml
.github/workflows/: codeql.yml  debug-build.yml  greetings.yml  release.yml  rust-clippy.yml
config/: cz-config.cjs
docs/: PLUGIN_DEVELOPMENT.md
locales/en/: auth.json  components.json  dialog.json  feedback.json  home.json  hook.json  mobileForgetCode.json  mobileLogin.json  mobileTabbar.json  plugins.json  preview.json  record.json  setting.json  time.json  update.json
locales/zh-CN/: auth.json  components.json  dialog.json  feedback.json  home.json  hook.json  mobileForgetCode.json  (+8 more)
public/: icon.js  models.json
scripts/: check-all.js  check-dependencies.js  check-local.js  interactive-build-inquirer.js  setup-env.js  setup-ffmpeg.js
src/: App.vue  main.ts
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/configuration/: base.yaml  local.yaml
src-tauri/copyright/: License.rtf
src-tauri/icons/: icon.icns
src-tauri/src/: configuration.rs  error.rs  init.rs  lib.rs  main.rs  plugin.rs  request_client.rs  request_command.rs  tray.rs
src-tauri/src/command/: ai.rs  ai_command.rs  common_command.rs  file_command.rs  fs.rs  fs_command.rs  mod.rs  plugin.rs  reader_command.rs  request.rs  request_command.rs  setting.rs  setting_command.rs  telemetry.rs  token.rs  token_command.rs  tts.rs  upload_command.rs
src-tauri/src/desktop/: cmd.rs  directory_scanner.rs  live_stream.rs  mod.rs  tts.rs  video_cover.rs  window_payload.rs  windows_mcp.rs
src-tauri/src/mobile/: mod.rs  splash.rs
src-tauri/src/utils/: config_store.rs  mod.rs  user_store.rs
src-tauri/src/websocket/: client.rs  commands.rs  types.rs
src-tauri/src/webview_helper/: ios.rs
tests/: desktop.spec.ts
(+273 files in other folders)
