[package]
name = "yuanlive-tauri"
version = "0.4.0"
description = "A Tauri App"
authors = ["yuanyuan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yuanlive_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 官方依赖
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

# Tauri 非官方依赖
tauri-plugin-mic-recorder = "2.0.0"
dotenv = "0.15.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
sysinfo = "0.38.0"
async-walkdir = "2.1.0"
tracing = { version = "0.1", features = ["log"] }
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "socks",
  "rustls-tls",
  "blocking",
  "stream",
  "multipart",
] }
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
tokio = "1.48.0"
futures = "0.3"
chrono = "0.4.42"
lazy_static = "1.5"
mime_guess = "2.0.5"

# WebSocket 相关依赖
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2.5"
tauri-plugin-deep-link = "2"

# 不兼容移动端的依赖
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
screenshots = "0.8.10"

# windows平台需要依赖
[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.62.2", features = [
  "Win32_System_Registry",
  "Win32_UI_HiDpi",
] }

[target."cfg(target_os = \"android\")".dependencies]
jni = "0.21"
ndk-context = "0.1"
